--- a/p8105_hw5_sm5567.md
+++ b/p8105_hw5_sm5567.md
@@ -3,20 +3,6 @@ Homework 5
 Shina Min
 2023-11-14
 
-### Due date
-
-Due: November 16 at 11:59pm.
-
-### Points
-
-| Problem         | Points    |
-|:----------------|:----------|
-| Problem 0       | 20        |
-| Problem 1       | –         |
-| Problem 2       | 40        |
-| Problem 3       | 40        |
-| Optional survey | No points |
-
 ### Problem 0
 
 This “problem” focuses on structure of your submission, especially the
@@ -130,3 +116,31 @@ test_results %>%
 This figure suggests a very wide range in the rate at which homicides
 are solved – Chicago is noticeably high and, given the narrowness of the
 CI, likely is the location of many homicides.
+
+## Problem 2
+
+## Loading all the necessary packages
+
+    ## 
+    ## Attaching package: 'rvest'
+
+    ## The following object is masked from 'package:readr':
+    ## 
+    ##     guess_encoding
+
+## A dataframe containing all file names using list.files function
+
+``` r
+comb_df = 
+  tibble(
+    files = list.files("data/", full.names = TRUE),
+    subject_id = tools::file_path_sans_ext(basename(files)),
+    arm = str_extract(subject_id, "control|experimental"),
+    data = map(files, read_csv)
+    ) %>% 
+unnest(data)
+```
+
+## Iterating over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
+
+## Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
