--- a/p8105_hw5_sm5567.Rmd
+++ b/p8105_hw5_sm5567.Rmd
@@ -30,21 +30,6 @@ theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ```
 
 
-### Due date
-
-Due: November 16 at 11:59pm. 
-
-### Points
-
-| Problem         | Points    |
-|:--------------- |:--------- |
-| Problem 0       | 20        |
-| Problem 1       | --        |
-| Problem 2       | 40        |
-| Problem 3       | 40        |
-| Optional survey | No points |
-
-
 ### Problem 0
 
 This "problem" focuses on structure of your submission, especially the use git and GitHub for reproducibility, R Projects to organize your work, R Markdown to write reproducible reports, relative paths to load data from local files, and reasonable naming structures for your files. This was not prepared as a GitHub repo.
@@ -124,4 +109,48 @@ test_results %>%
 ```
 
 This figure suggests a very wide range in the rate at which homicides are solved -- Chicago is noticeably high and, given the narrowness of the CI, likely is the location of many homicides. 
+
+## Problem 2
+
+
+
+
+## Loading all the necessary packages
+```{r, echo=FALSE}
+library(tidyverse)
+library(rvest)
+library(purrr)
+library(dplyr)
+library(broom)
+```
+
+
+## A dataframe containing all file names using list.files function
+```{r message = FALSE, warning= FALSE}
+comb_df = 
+  tibble(
+    files = list.files("data/", full.names = TRUE),
+    subject_id = tools::file_path_sans_ext(basename(files)),
+    arm = str_extract(subject_id, "control|experimental"),
+    data = map(files, read_csv)
+    ) %>% 
+unnest(data)
+```
+
+
+## Iterating over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
+```{r}
+
+```
+
+
+
+## Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+
+
+
+
+
+
+
 
