--- a/p8105_hw5_sm5567.md
+++ b/p8105_hw5_sm5567.md
@@ -133,12 +133,11 @@ CI, likely is the location of many homicides.
 ``` r
 comb_df = 
   tibble(
-    files = list.files("data/", full.names = TRUE),
-    subject_id = tools::file_path_sans_ext(basename(files)),
-    arm = str_extract(subject_id, "control|experimental"),
-    data = map(files, read_csv)
-    ) %>% 
-unnest(data)
+    files = list.files("data/"),
+    path = str_c("data/", files)
+  ) %>% 
+  mutate(data = map(path, read_csv)) %>%
+  unnest()
 ```
 
 ## Iterating over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
