--- a/p8105_hw5_sm5567.md
+++ b/p8105_hw5_sm5567.md
@@ -142,4 +142,32 @@ comb_df =
 
 ## Iterating over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
 
-## Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+``` r
+tidy_df = comb_df %>% 
+  mutate(
+    files = str_replace(files, ".csv", ""),
+    group = str_sub(files, 1, 3),
+    ID = str_sub(files, 5, 7)) %>%
+  pivot_longer(week_1:week_8,names_to = "week", values_to = "observation",names_prefix = "week_") %>%
+  mutate(week = as.numeric(week)) %>%
+  select(group, ID, week, observation)
+```
+
+## Making a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+
+``` r
+spagetti_plot = tidy_df %>%
+  ggplot(aes(x = week, y = observation, color = ID)) +
+  geom_line() +
+  geom_point() + 
+  facet_grid(~group) +
+  labs(x = 'Week', y = 'Observation', title = 'Observations on each Subject Over Time')
+
+spagetti_plot
+```
+
+<img src="p8105_hw5_sm5567_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+
+## Problem 3
+
+## Loading the samples
