--- a/p8105_hw5_sm5567.md
+++ b/p8105_hw5_sm5567.md
@@ -1,7 +1,7 @@
 Homework 5
 ================
 Shina Min
-2023-11-14
+11.14.2023
 
 ### Problem 0
 
@@ -171,3 +171,31 @@ spagetti_plot
 ## Problem 3
 
 ## Loading the samples
+
+``` r
+n = 30
+sigma = 5
+alpha = 0.05
+simulations = 5000
+```
+
+## The function below generates 5000 datasets from the model at mu = 0, with the above parameters.
+
+``` r
+sim_test = function(mu){
+
+  sim_data = tibble(rnorm(n = 30, mean = mu, sd = 5))
+
+  sim_data %>%
+    t.test() %>% 
+    broom::tidy() %>% 
+    select(estimate, p.value)
+}
+
+sim_results = 
+  expand_grid(
+    mu = 0,
+    iter = 1:5000) %>% 
+  mutate(t_test_df = map(mu, sim_test)) %>% 
+  unnest(t_test_df)
+```
