--- a/p8105_hw5_sm5567.Rmd
+++ b/p8105_hw5_sm5567.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Homework 5"
 author: "Shina Min"
-date: '`r format(Sys.time(), "%Y-%m-%d")`'
+date: "11.14.2023"
 output: github_document
 ---
 
@@ -171,10 +171,32 @@ spagetti_plot
 
 ## Loading the samples
 ```{r}
-
+n = 30
+sigma = 5
+alpha = 0.05
+simulations = 5000
 ```
 
 
+## The function below generates 5000 datasets from the model at mu = 0, with the above parameters.
+```{r}
+sim_test = function(mu){
+
+  sim_data = tibble(rnorm(n = 30, mean = mu, sd = 5))
+
+  sim_data %>%
+    t.test() %>% 
+    broom::tidy() %>% 
+    select(estimate, p.value)
+}
+
+sim_results = 
+  expand_grid(
+    mu = 0,
+    iter = 1:5000) %>% 
+  mutate(t_test_df = map(mu, sim_test)) %>% 
+  unnest(t_test_df)
+```
 
 
 
