--- a/p8105_hw5_sm5567.md
+++ b/p8105_hw5_sm5567.md
@@ -173,6 +173,7 @@ spagetti_plot
 ## Loading the samples
 
 ``` r
+set.seed(12345)
 n = 30
 sigma = 5
 alpha = 0.05
@@ -199,3 +200,35 @@ sim_results =
   mutate(t_test_df = map(mu, sim_test)) %>% 
   unnest(t_test_df)
 ```
+
+## The table below generates 5000 datasets from the model at mu = 1, 2, 3, 4, 5, 6, with the above parameters.
+
+``` r
+sim_results_2 =
+  expand_grid(
+    mu = 0:6,
+    iter = 1:5000) %>%
+  mutate(t_test_df_2 = map(mu, sim_test)) %>%
+  unnest(t_test_df_2)
+```
+
+## Making a plot showing the proportion of times the null was rejected (the power of the test) on the y axis and the true value of μ on the x axis.
+
+``` r
+sim_results_2 |> 
+  group_by(mu) |> 
+  summarize(proportion_rejected = sum(p.value < 0.05)/5000) |> 
+  ggplot(aes(x = mu, y = proportion_rejected)) +
+  geom_point() +
+  geom_line() +
+  labs(
+    title = "Power of the Test vs True Value of μ",
+       x = "True μ",
+       y = "Power of the test")
+```
+
+<img src="p8105_hw5_sm5567_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
+
+- Describe the association between effect size and power.
+
+## Make a plot showing the average estimate of μ̂ on the y axis and the true value of μ on the x axis. Make a second plot (or overlay on the first) the average estimate of μ̂ only in samples for which the null was rejected on the y axis and the true value of μ on the x axis. Is the sample average of μ̂ across tests for which the null is rejected approximately equal to the true value of μ? Why or why not?
