Putting comments for each plot

--- a/p8105_hw5_sm5567.md
+++ b/p8105_hw5_sm5567.md
@@ -3,14 +3,6 @@ Homework 5
 Shina Min
 11.14.2023
 
-### Problem 0
-
-This “problem” focuses on structure of your submission, especially the
-use git and GitHub for reproducibility, R Projects to organize your
-work, R Markdown to write reproducible reports, relative paths to load
-data from local files, and reasonable naming structures for your files.
-This was not prepared as a GitHub repo.
-
 ``` r
 library(tidyverse)
 ```
@@ -168,6 +160,11 @@ spagetti_plot
 
 <img src="p8105_hw5_sm5567_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
 
+- In the control group, observations for each subject consistently hover
+  around a stable value, whereas in the experimental group, there is a
+  discernible trend of increasing observations among subjects as the
+  weeks unfold.
+
 ## Problem 3
 
 ## Loading the samples
@@ -212,6 +209,12 @@ sim_results_2 =
   unnest(t_test_df_2)
 ```
 
+- This plot illustrates the proportion of instances where the null
+  hypothesis was rejected (indicating the test’s power) on the y-axis,
+  with the true value of μ on the x-axis. The plot highlights a
+  proportional relationship between effect size and power: as the true
+  value of μ rises, the test’s power also increases.
+
 ## Making a plot showing the proportion of times the null was rejected (the power of the test) on the y axis and the true value of μ on the x axis.
 
 ``` r
@@ -229,7 +232,13 @@ sim_results_2 |>
 
 <img src="p8105_hw5_sm5567_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
 
-- Describe the association between effect size and power.
+- The plot depicted here illustrates the mean estimate of μ-hat on the
+  y-axis against the true value of μ on the x-axis. The second plot,
+  overlaid on the first, specifically portrays the mean estimate of
+  μ-hat in samples where the null hypothesis was rejected on the y-axis,
+  with the true value of μ on the x-axis.
+
+## showing the average estimate of μ̂ on the y axis and the true value of μ on the x axis
 
 ``` r
 avg_estimate = 
@@ -246,4 +255,30 @@ avg_rejected_estimate =
   ungroup()
 ```
 
-## Make a plot showing the average estimate of μ̂ on the y axis and the true value of μ on the x axis. Make a second plot (or overlay on the first) the average estimate of μ̂ only in samples for which the null was rejected on the y axis and the true value of μ on the x axis. Is the sample average of μ̂ across tests for which the null is rejected approximately equal to the true value of μ? Why or why not?
+## Make a plot showing the average estimate of μ̂ on the y axis and the true value of μ on the x axis. Make a second plot (or overlay on the first) the average estimate of μ̂ only in samples for which the null was rejected on the y axis and the true value of μ on the x axis.
+
+``` r
+ggplot() +
+  geom_line(data = avg_estimate, aes(x = mu, y = average_estimate, color = "full estimate")) +
+  geom_line(data = avg_rejected_estimate, aes(x = mu, y = average_estimate, color = "rejected estimate")) +
+  geom_point(data = avg_estimate, aes(x = mu, y = average_estimate, color = "full estimate")) +
+  geom_point(data = avg_rejected_estimate, aes(x = mu, y = average_estimate, color = "rejected estimate")) +
+  scale_color_manual(values = c("full estimate" = "blue", "rejected estimate" = "red")) +
+  labs(
+    title = "All Estimates of μ^ vs Rejected Estimates of μ^",
+       x = "True μ",
+       y = "Average estimate of μ^")
+```
+
+<img src="p8105_hw5_sm5567_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
+
+- Is the sample average of μ̂ across tests for which the null is rejected
+  approximately equal to the true value of μ? Why or why not?
+
+  - The mean of μ-hat across tests where the null hypothesis is rejected
+    differs from the true value of μ. The average of rejected μ-hat
+    estimates deviates from the overall mean estimates when the true μ
+    is equal to 4. For cases where μ is less than 4, the rejected μ-hat
+    estimate is associated with a smaller sample size and lower
+    statistical power. Conversely, for situations where μ is greater
+    than 4, there is a larger sample size and higher statistical power.
