--- a/p8105_hw5_sm5567.Rmd
+++ b/p8105_hw5_sm5567.Rmd
@@ -146,7 +146,6 @@ tidy_df = comb_df %>%
 ```
 
 
-
 ## Making a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
 
 ```{r}
@@ -196,7 +195,7 @@ sim_results =
 ```
 
 
-## The table below generates 5000 datasets from the model at mu = 1, 2, 3, 4, 5, 6, with the above parameters.
+## Generating 5000 datasets from the model at mu = 1, 2, 3, 4, 5, 6, with the above parameters.
 ```{r}
 sim_results_2 =
   expand_grid(
