--- a/p8105_hw5_sm5567.md
+++ b/p8105_hw5_sm5567.md
@@ -198,7 +198,7 @@ sim_results =
   unnest(t_test_df)
 ```
 
-## The table below generates 5000 datasets from the model at mu = 1, 2, 3, 4, 5, 6, with the above parameters.
+## Generating 5000 datasets from the model at mu = 1, 2, 3, 4, 5, 6, with the above parameters.
 
 ``` r
 sim_results_2 =
