--- a/p8105_hw5_sm5567.Rmd
+++ b/p8105_hw5_sm5567.Rmd
@@ -172,7 +172,7 @@ sigma = 5
 alpha = 0.05
 simulations = 5000
 ```
-
+  * We define a function that conducts a one-sample t-test with parameters set to n = 30, mu = 0, sigma = 5, and a significance level of 0.05.
 
 ## The function below generates 5000 datasets from the model at mu = 0, with the above parameters.
 ```{r}
